--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -637,7 +637,30 @@ footer p{
     opacity: 1;
 }
 
+.fixed-btn{
+  position: fixed;
+  bottom: 10%;
+  right: 3%;
+  background: #0FACF3;
+  width: 180px;
+  height: 45px;
+  line-height: 45px;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 4px 4px 4px #0a78aa;
+  cursor: pointer;
+}
 
+.fixed-btn p{
+  text-transform: uppercase;
+  font-family: arial;
+  font-weight: 900;
+  color: #fff;
+}
+
+.fixed-btn:active{
+  box-shadow: 0  0;
+}
 
 
 
